--- a/action.yml
+++ b/action.yml
@@ -17,5 +17,5 @@ runs:
     - id: random-number-generator
       run: echo "::set-output name=random-id::$(echo $RANDOM)"
       shell: bash
-    - run: ${{ github.action_path }}/goodbye.sh
+    - run: echo ${{ github.actor }} ${{ github.event_name }} ${{ github.workflow }} 
       shell: bash
