--- a/action.yml
+++ b/action.yml
@@ -19,3 +19,12 @@ runs:
       shell: bash
     - run: echo ${{ github.actor }} ${{ github.event_name }} ${{ github.workflow }} 
       shell: bash
+    - uses: actions/github-script@v3
+      with:
+        script: |
+          github.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: "test"
+          })
