--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ runs:
       with:
         github-token: ${{ inputs.github-token }}
         script: |
-          github.issues.createComment({
+          github.rest.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
