--- a/action.yml
+++ b/action.yml
@@ -5,8 +5,6 @@ inputs:
     description: 'Who to greet'
     required: true
     default: 'World'
-  github-token:
-    description: github-token
 outputs:
   random-number:
     description: "Random number"
@@ -21,11 +19,10 @@ runs:
       shell: bash
     - run: echo ${{ github.actor }} ${{ github.event_name }} ${{ github.workflow }} 
       shell: bash
-    - uses: actions/github-script@v5
+    - uses: actions/github-script@v3
       with:
-        github-token: ${{ inputs.github-token }}
         script: |
-          github.rest.issues.createComment({
+          github.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
